<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_name">&#160;&#160;الكرة المغربية</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
  <string name="checkin">Checkin</string>
  <string name="app_title">الكرة المغربية</string>
  <string name="menu_night_mode">Night mode</string>
  <string name="menu_night_mode_system">Follow system</string>
  <string name="menu_night_mode_day">Day (always)</string>
  <string name="menu_night_mode_night">Night (always)</string>
  <string name="menu_night_mode_auto">Auto</string>
  <string name="category_1">أخر الأخبار</string>
  <string name="category_2">أسود الأطلس</string>
  <string name="category_3">الكرة العالمية</string>
  <string name="category_4">الكرة العربية</string>
  <string name="category_5">الكرة المغربية</string>
  <string name="category_6">بث المباريات</string>
  <string name="category_7">جماهير</string>
  <string name="category_8">رياضات أخرى</string>
  <string name="category_9">فيديو</string>
  <string name="category_10">أهم الأخبار</string>
  <string name="about">حول تطبيق</string>
  <string name="rateUp_title">قيم تطبيق الكرة المغربية</string>
  <string name="rateUp"> إذا استمتعت باستخدام التطبيق الرجاء تقييمه . شكرا للدعم</string>
  <string name="rateItNow"> قيمه الآن</string>
  <string name="noRate">لا أريد</string>
  <string name="rateLater">لاحقا</string>
  <string name="ad_id_interstitial">ca-app-pub-8758438984930676/9008667746</string>
  <string name="ad_id_banner">ca-app-pub-8758438984930676/4578468149</string>
  <string name="ad_id_native">ca-app-pub-8758438984930676/5915600541</string>
  <string name="admob_id">ca-app-pub-8758438984930676~1764602548</string>
  <string name="FB_AppID">1373876602658215</string>

</resources>
