<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cat1"
            android:icon="@drawable/ic_cat1"
            android:title="@string/category_1" />

        <item
            android:id="@+id/cat5"
            android:icon="@drawable/ic_cat2"
            android:title="@string/category_5" />

        <item
            android:id="@+id/cat9"
            android:icon="@drawable/ic_cat3"
            android:title="@string/category_9" />

        <item
            android:id="@+id/cat2"
            android:icon="@drawable/ic_cat4"
            android:title="@string/category_2" />

        <item
            android:id="@+id/cat3"
            android:icon="@drawable/ic_cat5"
            android:title="@string/category_3" />

        <item
            android:id="@+id/cat4"
            android:icon="@drawable/ic_cat6"
            android:title="@string/category_4" />

        <!--<item
            android:id="@+id/cat6"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/category_6" />-->

        <item
            android:id="@+id/cat7"
            android:icon="@drawable/ic_cat7"
            android:title="@string/category_7" />

        <item
            android:id="@+id/cat8"
            android:icon="@drawable/ic_cat8"
            android:title="@string/category_8" />

        <item
            android:id="@+id/cat10"
            android:icon="@drawable/ic_cat9"
            android:title="@string/category_10" />



    </group>


            <item
                android:icon="@drawable/ic_forum"
                android:title="@string/about"
                android:id="@+id/about"/>





</menu>
